kubernetes/golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: golang
  name: golang
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 80
    targetPort: 3000
  selector:
    io.kompose.service: golang
