kubernetes/spotifyapi_mgo-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spotifyapi_mgo-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/spotifyapi_mgo-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spotifyapi_mgo-network: "true"
